--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "s3",
     "image"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/proton0210/react-s3-image-hook"
+  },
   "author": "Vidit Shah",
   "license": "MIT"
 }
